--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>Programador</title>
 </head>
 <body>
-    <h1>Seja bem vindo!</h1>
-    <h2>Descubra o mundo da programação!</h2>
+    <main>
+    <header>
+        <h1>Seja bem vindo!</h1>
+    </header>
     
+    <main> 
 </body>
 </html>
