--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <title>Programador</title>
 </head>
 <body>
+<div id="interface">
     <main>
     <header>
-        <h1>Seja bem vindo!</h1>
+       <hgroup>
+           <h1>Seja bem vindo!</h1>
+           <h2>A programação é incrível!</h2>
+       </hgroup>
     </header>
     
     <main> 
+<div>
 </body>
 </html>
