--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programador</title>
+    <link rel="stylesheet" href="design/style.css">
 </head>
 <body>
 <div id="interface">
