--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programador</title>
+    <title>O Programador</title>
 </head>
 <body>
 <div id="interface">
@@ -11,9 +11,12 @@
     <header>
        <hgroup>
            <h1>Seja bem vindo!</h1>
+           <hr>
            <h2>A programação é incrível!</h2>
+           <hr>
        </hgroup>
     </header>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur delectus illum rerum itaque a voluptatem minus iure, quibusdam tempora vero natus explicabo magni veritatis ab obcaecati odit ut! Aperiam, eaque.</p>
     
     <main> 
 <div>
