de volta a ativa

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
        </hgroup>
     </header>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur delectus illum rerum itaque a voluptatem minus iure, quibusdam tempora vero natus explicabo magni veritatis ab obcaecati odit ut! Aperiam, eaque.</p>
+    <p><a href="pag001.html">Proximo</a></p>
     
     <main> 
 <div>
