--- a/pag001.html
+++ b/pag001.html
@@ -15,6 +15,11 @@
             <h2>É um teste!</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat temporibus, consequuntur beatae doloremque hic cumque vero quasi ipsum delectus quod reprehenderit? Esse deleniti facilis soluta rerum ad nam doloribus impedit?</p>
             <p><a href="index.html">Voltar</a></p>
+            <ul>
+                <li>Acordar as 07:30</li>
+                <li>Tomar café</li>
+                <li>Iniciar estudos</li>
+            </ul>
             </hgroup>
         </header>
         </main>
