--- a/pag001.html
+++ b/pag001.html
@@ -10,16 +10,20 @@
     <main>
     <header>
         <hgroup>
-            <h1>Está é a segunda página</h1>
+            <h1>Rotina diária</h1>
             <hr>
-            <h2>É um teste!</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat temporibus, consequuntur beatae doloremque hic cumque vero quasi ipsum delectus quod reprehenderit? Esse deleniti facilis soluta rerum ad nam doloribus impedit?</p>
-            <p><a href="index.html">Voltar</a></p>
+            <p>Veja só como é minha rotina do dia a dia!</p>
             <ul>
                 <li>Acordar as 07:30</li>
                 <li>Tomar café</li>
                 <li>Iniciar estudos</li>
+                <li>Descanso para o Almoço</li>
+                <li>Retomar estudos as 14:00</li>
+                <li>Descanso as 18:00</li>
+                <li>Ler um livro, ou exercicio físico</li>
+                <li>Estudos sobre HTML</li>
             </ul>
+            <p><a href="index.html">Voltar para a página principal</a></p>
             </hgroup>
         </header>
         </main>
