--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>O Programador</title>
+    <title>O Estudante</title>
 </head>
 <body>
 <div id="interface">
@@ -12,12 +12,12 @@
        <hgroup>
            <h1>Seja bem vindo!</h1>
            <hr>
-           <h2>A programação é incrível!</h2>
+           <h2>Sempre em busca de conhecimentos!</h2>
        </hgroup>
     </header>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur delectus illum rerum itaque a voluptatem minus iure, quibusdam tempora vero natus explicabo magni veritatis ab obcaecati odit ut! Aperiam, eaque.</p>
-    <p><a href="pag001.html">Proximo</a></p>
-            <h2>Temos material de estudo!!</h2>
+    <p>A vida de quem quer aprender coisas novas não é fácil, e para isso, é preciso criar uma rotina e separar os horarios para aproveitar bem o dia. Veja como é a minha rotina!</p>
+    <p><a href="pag001.html">Minha Rotina</a></p>
+            <h2>Temos material de estudo!</h2>
     <p>Este material contém apostilas e slides para o concurso da Policia Militar do Estado do Tocatins que ocorrera em março de 2021!</p>
     <p><a href="downloads/pag002.html">Baixe aqui suas apostilas e slides</a></p>
     
