--- a/downloads/pag002.html
+++ b/downloads/pag002.html
@@ -20,7 +20,7 @@
                 <li><a href="#">Side História do Tocantins</a></li>
                 <li><a href="#">Slide Estatuto da PMTO</a></li>
             </ul>
-            <p><a href="../index.html">Voltar</a></p>
+            <p><a href="../index.html" target="_self" rel="prev">Voltar</a></p>
         </hgroup>
     </header>
     </main>
