--- a/pag001.html
+++ b/pag001.html
@@ -23,7 +23,7 @@
                 <li>Ler um livro, ou exercicio físico</li>
                 <li>Estudos sobre HTML</li>
             </ul>
-            <p><a href="index.html">Voltar para a página principal</a></p>
+            <p><a href="index.html" target="_self" rel="prev">Voltar para a página principal</a></p>
             </hgroup>
         </header>
         </main>
