--- a/downloads/pag002.html
+++ b/downloads/pag002.html
@@ -21,7 +21,7 @@
                 <li><a href="#">Side História do Tocantins</a></li>
                 <li><a href="#">Slide Estatuto da PMTO</a></li>
             </ul>
-            <p><a href="../index.html" target="_self" rel="prev">Voltar</a></p>
+            <p><a href="../index.html" target="_self" rel="prev"><em><strong>Voltar</strong></em></a></p>
         </hgroup>
     </header>
     </main>
