--- a/pag001.html
+++ b/pag001.html
@@ -24,7 +24,7 @@
                 <li>Ler um livro, ou exercicio físico</li>
                 <li>Estudos sobre HTML</li>
             </ul>
-            <p><a href="index.html" target="_self" rel="prev">Voltar para a página principal</a></p>
+            <p><a href="index.html" target="_self" rel="prev"><em><strong>Voltar para página principal</strong></em></a></p>
             </hgroup>
         </header>
         </main>
