--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
        </hgroup>
     </header>
     <p>A vida de quem quer aprender coisas novas não é fácil, e para isso, é preciso criar uma rotina e separar os horarios para aproveitar bem o dia. Veja como é a minha rotina!</p>
-    <p><a href="pag001.html" target="_self" rel="next">Minha Rotina</a></p>
+    <p><a href="pag001.html" target="_self" rel="next"><em><strong>Minha rotina</strong></em></a></p>
             <h2>Temos material de estudo!</h2>
-    <p>Este material contém apostilas e slides para o concurso da Policia Militar do Estado do Tocatins que ocorrera em março de 2021!</p>
-    <p><a href="downloads/pag002.html" target="_self" rel="next">Baixe aqui suas apostilas e slides</a></p>
+    <p>No link abaixo, contém apostilas e slides para o concurso da Policia Militar do Estado do Tocatins que ocorrera em março de 2021!</p>
+    <p><a href="downloads/pag002.html" target="_self" rel="next"><em><strong>Obtenha o material</strong></em></a></p>
     
     <main> 
 <div>
