--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     <p>No link abaixo, contém apostilas e slides para o concurso da Policia Militar do Estado do Tocatins que ocorrera em março de 2021!</p>
     <p><a href="downloads/pag002.html" target="_self" rel="next"><em><strong>Obtenha o material</strong></em></a></p>
     
+    <picture>
+        <source media="(max-width: 750px)" srcset="imagens/foto-p.png" type="image/png">
+        <source media="(max-width: 1050px)" srcset="imagens/foto-m.png" type="image/png">
+        <img src="imagens/foto-g.png" alt="Imagem flexível">
+    </picture>
     <main> 
 <div>
 </body>
