imagem com link

--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
     <p><a href="pag001.html" target="_self" rel="next"><em><strong>Minha rotina</strong></em></a></p>
             <h2>Temos material de estudo!</h2>
     <p>No link abaixo, contém apostilas e slides para o concurso da Policia Militar do Estado do Tocatins que ocorrera em março de 2021!</p>
-    <p><a href="downloads/pag002.html" target="_self" rel="next"><em><strong>Obtenha o material</strong></em></a></p>
+    <p><em><strong>Obtenha o material clicando na imagem!</strong></em></p>
     
-    <picture>
-        <source media="(max-width: 750px)" srcset="imagens/foto-p.png" type="image/png">
-        <source media="(max-width: 1050px)" srcset="imagens/foto-m.png" type="image/png">
-        <img src="imagens/foto-g.png" alt="Imagem flexível">
-    </picture>
+    <a href="downloads/pag002.html" target="_self" rel="next">
+        <picture>
+            <source media="(max-width: 750px)" srcset="imagens/foto-p.png" type="image/png">
+            <source media="(max-width: 1050px)" srcset="imagens/foto-m.png" type="image/png">
+            <img src="imagens/foto-g.png" alt="Imagem flexível">
+        </picture>
+    </a>
     <main> 
 <div>
 </body>
