--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     </header>
     <p>A vida de quem quer aprender coisas novas não é fácil, e para isso, é preciso criar uma rotina e separar os horarios para aproveitar bem o dia. Veja como é a minha rotina!</p>
     <p><a href="pag001.html" target="_self" rel="next"><em><strong>Minha rotina</strong></em></a></p>
+    <h2>Conheça um pouco do meu trabalho!</h2>
+    <p>Aprendi a criar animações em 3D por volta de 2015 aos meus 12 anos, foi uma época ótima, era um hobbie para mim.</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/LJ7YORmj0pw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p><a href="https://www.youtube.com/c/MasterGFX2" target="_blank" rel="external"><em><strong>Acesse meu canal!</strong></em></a></p>
             <h2>Temos material de estudo!</h2>
     <p>No link abaixo, contém apostilas e slides para o concurso da Policia Militar do Estado do Tocatins que ocorrera em março de 2021!</p>
     <p><em><strong>Obtenha o material clicando na imagem!</strong></em></p>
