--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p>A vida de quem quer aprender coisas novas não é fácil, e para isso, é preciso criar uma rotina e separar os horarios para aproveitar bem o dia. Veja como é a minha rotina!</p>
 
     <div class="btns">
-        <button type="button" class="efeito-1">Clique Aqui</button>
+        <a href="pag001.html" target="-self" rel="next"><button type="button" class="efeito efeito-1">Minha Rotina!</button></a>
 
     </div>
 
