--- a/downloads/pag002.html
+++ b/downloads/pag002.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style-font.css">
+
     <title>O Estudante</title>
+
 </head>
+
 <body>
+
 <div id="interface">
+
     <main>
+
     <header>
+
         <hgroup>
             <h1>Materiais de Estudo</h1>
             <hr>
@@ -21,10 +31,15 @@
                 <li><a href="#">Side História do Tocantins</a></li>
                 <li><a href="#">Slide Estatuto da PMTO</a></li>
             </ul>
+
             <p><a href="../index.html" target="_self" rel="prev"><em><strong>Voltar</strong></em></a></p>
+
         </hgroup>
+
     </header>
+
     </main>
+    
 </div>
     
 </body>
