--- a/pag001.html
+++ b/pag001.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../site-ofc/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style-font.css">
+
     <title>O Estudante</title>
+    
 </head>
+
 <body>
-<div id="interface">       
+
+<div id="interface">  
+
     <main>
+
     <header>
+
         <hgroup>
             <h1>Rotina diária</h1>
             <hr>
+
             <p>Veja só como é minha rotina do dia a dia!</p>
             <ul>
                 <li>Acordar as 07:30</li>
@@ -24,10 +35,15 @@
                 <li>Ler um livro, ou exercicio físico</li>
                 <li>Estudos sobre HTML</li>
             </ul>
+
             <p><a href="index.html" target="_self" rel="prev"><em><strong>Voltar para página principal</strong></em></a></p>
+
             </hgroup>
+
         </header>
+
         </main>
+
     </div>
     
 </body>
