--- a/downloads/pag002.html
+++ b/downloads/pag002.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style-font.css">
+    <link rel="stylesheet" href="../style-font.css">
 
     <title>O Estudante</title>
 
